[package]
name = "market"
description = "A cargo-generate template for Rust + Sway integration testing."
version = "0.1.0"
edition = "2021"
authors = ["alexey <alexnagornnyy.an@gmail.com>"]
license = "Apache-2.0"

[dev-dependencies]
fuels = { version = "0.38.1", features = ["fuel-core-lib"] }
tokio = { version = "1.12", features = ["rt", "macros"] }

[[test]]
harness = true
name = "integration_tests"
path = "tests/harness.rs"

[dependencies]
dotenv = "0.15.0"
fuel-chain-config = "0.15.3"
fuels-types = "0.35.1"
rand = "0.8.5"
reqwest = "0.11.13"
serde_json = "1.0.91"
