[package]
name = "oracle"
version = "0.0.0"
authors = ["Alex Nagorny <alex@swaygang.com>"]
edition = "2021"
license = "Apache-2.0"

[dev-dependencies]
fuels = { version = "0.38.1", features = ["fuel-core-lib"] }
tokio = { version = "1.12", features = ["rt", "macros"] }

[[test]]
harness = true
name = "integration_tests"
path = "tests/harness.rs"

[dependencies]
dotenv = "0.15.0"
rand = "0.8.5"
reqwest = "0.11.13"
serde_json = "1.0.91"
